<resources>
    <string name="app_name">LovelyNote</string>
    <string name="changelog_full_title">Change Log</string>
    <string name="changelog_title">What\'s New</string>
    <string name="changelog_ok_button">OK</string>
    <string name="note_count">All Notes(%d)</string>
    <string name="page_count">(%d) Page</string>
    <string name="note_defalut_name">Virtual Page</string>
    <string name="note_select">Select</string>
    <string name="delete_note_confirm">确定要删除笔记(%s)吗？</string>
    <string name="copy">Copy</string>
    <string name="cut">Cut</string>
    <string name="delete">Delete</string>
    <string name="paste">Paste</string>
    <string name="cancel">Cancel</string>
</resources>
