<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="horizontal">

    <Button
        android:id="@+id/clip_copy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/copy"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:visibility="gone"/>


    <Button
        android:id="@+id/clip_cut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cut"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:visibility="gone"/>


    <Button
        android:id="@+id/clip_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:visibility="gone"/>


    <Button
        android:id="@+id/clip_paste"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/paste"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:visibility="gone"/>


    <Button
        android:id="@+id/clip_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:visibility="gone"/>
</LinearLayout>
